--- a/email_test.html
+++ b/email_test.html
@@ -103,7 +103,7 @@
                     <tr>
                       <td align="left" style="font-size:0px;padding:10px 25px;word-break:break-word;">
                         <div style="font-family:Ubuntu, Helvetica, Arial, sans-serif;font-size:18px;line-height:1.5;text-align:left;color:#000000;">
-                          <p>Dear 1 1 </p>
+                          <p>Dear </p>
                           <p>Welcome to Constellate.</p>
                           <p><em>(Copy goes here to mention terms of service and community guidelines)</em></p>
                           <p>If you have any problems logging in, or you have not attempted to log in, please <a href='mailto:info@greening.digital'>contact support------------------------------------------------------------hello.</a></p>
